--- a/src/index.html
+++ b/src/index.html
@@ -13,26 +13,26 @@
 <body>
     <header>
         <div class="logos">
-            <a href=""><img src="icons/logo_sv.svg" alt="Лого ШВ" class="logo"></a>
-            <a href=""><img src="icons/logo_vd.svg" alt="Лого ВД" class="logo"></a>
+            <a href="#"><img src="icons/logo_sv.svg" alt="Лого ШВ" class="logo"></a>
+            <a href="#"><img src="icons/logo_vd.svg" alt="Лого ВД" class="logo"></a>
         </div>
         <div class="menu">
             <ul class="menu__list">
-                <li class="menu__i"><a class="menu__a" href="#">FAQ</a></li>
-                <li class="menu__i"><a class="menu__a" href="#">Отзывы</a></li>
+                <li class="menu__i"><a class="menu__a" href="#head_faq">FAQ</a></li>
+                <li class="menu__i"><a class="menu__a" href="#head_review">Отзывы</a></li>
             </ul>
-            <a href="https://vk.com/vozhse" class="menu__logo"><img src="icons/vk.svg" alt="Лого ВК"></a>
+            <a href="https://vk.com/vozhse"><img src="icons/vk.svg" alt="Лого ВК" class="menu__logo"></a>
         </div>
     </header>
 
     <section>
-        <div class="promo">
+        <div class=" promo">
             <div class="promo__content">
                 <h1 class="title title_big">ШКОЛА</h1>
                 <h2 class="title title_big">ВОЖАТЫХ</h2>
                 <h2 class="title title_big title_big_red">НИУ ВШЭ</h2>
                 <p class="subtitle subtitle_promo">Проект для тех, кто хочет стать вожатым</p>
-                <a href="#"><button class="promo__btn subtitle subtitle_btn_promo">Подробнее</button></a>
+                <a href="#head_format"><button class="promo__btn subtitle subtitle_btn_promo">Подробнее</button></a>
             </div>
         </div>
     </section>
@@ -91,18 +91,20 @@
                     <h3 class="descr descr_num descr_num_red">участников на проектах</h3>
                 </div>
             </div>
-            <a href="https://vk.com/vozhse" class="org__logo"><img src="icons/vk.svg" alt="Лого ВК"></a>
+            <a href="https://vk.com/vozhse" class="org__logo"><img class="menu__logo" src="icons/vk.svg"
+                    alt="Лого ВК"></a>
         </div>
     </section>
 
     <section>
         <div class="format">
-            <h2 class="title title_format">Формат Школы вожатых</h2>
+            <h2 id="head_format" class="title title_format">Формат Школы вожатых</h2>
             <div class="format__wrapper">
                 <div class="format__item">
                     <img src="icons/format/el1.svg" alt="Фигура" class="format__img">
                     <h3 class="format__subtitle title_mini title">Система кураторства</h3>
-                    <p class="format__descr text">Кураторы групп — опытные вожатые, принимающие участие в практических
+                    <p class="format__descr text">Кураторы групп — опытные вожатые, принимающие участие в
+                        практических
                         занятиях;
                         к ним можно обратиться за индивидуальной обратной связью, консультацией, лайфхаками из опыта
                         работы</p>
@@ -110,21 +112,23 @@
                 <div class="format__item">
                     <img src="icons/format/el2.svg" alt="Фигура" class="format__img">
                     <h3 class="format__subtitle title_mini title">Работа в группе</h3>
-                    <p class="format__descr text">Участники будут сформированы в группы единомышленников для развития
+                    <p class="format__descr text">Участники будут сформированы в группы единомышленников для
+                        развития
                         soft-skills
                         в процессе нетворкинга</p>
                 </div>
-                <div class="format__item">
+                <div class="format__item format__item3">
                     <img src="icons/format/el3.svg" alt="Фигура" class="format__img">
                     <h3 class="format__subtitle title_mini title">Персонализация трека обучения</h3>
                     <p class="format__descr text">С помощью факультативов участники могут адаптировать наполненность
                         Школы под собственные запросы</p>
                 </div>
-                <div class="format__item">
+                <div class="format__item format__item4">
                     <img src="icons/format/el4.svg" alt="Фигура" class="format__img">
                     <h3 class="format__subtitle_nogap title_mini title">Теория</h3>
                     <h3 class="format__subtitle title_mini title">и практика</h3>
-                    <p class="format__descr text">Теоретическая база от опытных вожатых и практические задачи на основе
+                    <p class="format__descr text">Теоретическая база от опытных вожатых и практические задачи на
+                        основе
                         реальных кейсов</p>
                 </div>
             </div>
@@ -135,14 +139,16 @@
 
     <section>
         <div class="review">
-            <h2 class="title title_review">Отзывы участников</h2>
+            <h2 id="head_review" class="title title_review">Отзывы участников</h2>
             <div class="review__wrapper">
                 <div class="review__item">
                     <img src="img/review/rev1.png" alt="Паша Лукин" class="review__img">
                     <h2 class="review__name title title_name">Паша Лукин</h2>
                     <h3 class="subtitle subtitle_name">участник 2 сезона, организатор 3 сезона Школы вожатых</h3>
-                    <p class="text text_rev">На Школе вожатых не просто дают навыки для работы, но и прививают любовь к
-                        детям и желание отдавать свою энергию. Большой банк игр, взаимопонимание, а также умение решать
+                    <p class="text text_rev">На Школе вожатых не просто дают навыки для работы, но и прививают
+                        любовь к
+                        детям и желание отдавать свою энергию. Большой банк игр, взаимопонимание, а также умение
+                        решать
                         конфликты и ставить номера — всё это я получил на Школе вожатых и смог применить в работе.
                         Проект настолько меня зарядил, что этим летом я поехал не только вожатым, но и
                         педагогом-организатором.</p>
@@ -151,22 +157,28 @@
                     <img src="img/review/rev2.png" alt="Лиза Рудич" class="review__img">
                     <h2 class="review__name title title_name">Лиза Рудич</h2>
                     <h3 class="subtitle subtitle_name_small">участник 2 сезона Школы вожатых</h3>
-                    <p class="text text_rev">Подавала заявку больше из-за желания просто заняться чем-то активным. Нашла
+                    <p class="text text_rev">Подавала заявку больше из-за желания просто заняться чем-то активным.
+                        Нашла
                         не только отличное комьюнити, но и прониклась к вожатству как к наставничеству и созданию
                         разнообразного досуга для детей. Это дало толчок к развитию — до этого был довольно сложный
                         эмоционально период. После Школы я работала в летней школе от Вышки, ЛМШ2022, и прониклась к
                         работе вожатого ещё больше. Всё, что было пройдено в теории, нашло своё применение и на
-                        практике! А с ребятами из Школы вожатых я до сих пор поддерживаю связь. Периодически вижу анонсы
+                        практике! А с ребятами из Школы вожатых я до сих пор поддерживаю связь. Периодически вижу
+                        анонсы
                         проектов «Вышка — детям» и не могу сдержать порыв поучаствовать.</p>
                 </div>
                 <div class="review__item">
                     <img src="img/review/rev3.png" alt="Надя Филатова" class="review__img">
                     <h2 class="review__name title title_name">Надя Филатова</h2>
-                    <h3 class="subtitle subtitle_name">участник 1 сезона, организатор 2 и 3 сезонов Школы вожатых</h3>
-                    <p class="text text_rev">Школа вожатых — это место, в котором исполняются мечты, место с невероятной
-                        энергетикой и творческими заряженными людьми. После дистанционного режима и небольшой апатии это
+                    <h3 class="subtitle subtitle_name">участник 1 сезона, организатор 2 и 3 сезонов Школы вожатых
+                    </h3>
+                    <p class="text text_rev">Школа вожатых — это место, в котором исполняются мечты, место с
+                        невероятной
+                        энергетикой и творческими заряженными людьми. После дистанционного режима и небольшой апатии
+                        это
                         было спасением от учебных будней, грустных мыслей и безделья. Я с нетерпением ждала занятия,
-                        потому что знала, что эти три часа будут наполнены полезными знаниями, смехом и улыбками ребят
+                        потому что знала, что эти три часа будут наполнены полезными знаниями, смехом и улыбками
+                        ребят
                         из моей команды. Это мой первый шаг во внеучебной жизни Вышки. Сейчас я участвую во многих
                         проектах, и, наверное, такой запал подарила мне Школа вожатых.</p>
                 </div>
@@ -179,24 +191,32 @@
             <h2 class="title title_camps">Где работают выпускники?</h2>
             <div class="camps__wrapper">
                 <div class="camps__item">
-                    <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img">
-                    <a href="" class="descr descr_site">Сайт</a>
+                    <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img dano">
+                    <a href="https://dano.hse.ru/" class="descr descr_site">Сайт</a>
                 </div>
-                <div class="camps__item orl">
-                    <img src="img/camps/camp2.png" alt="Лагерь лого" class="camps__img">
-                    <a href="" class="descr descr_site">Сайт</a>
+                <div class="camps__item">
+                    <img src="img/camps/camp2.png" alt="Лагерь лого" class="camps__img orl">
+                    <a href="https://center-orlyonok.ru/" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp3.png" alt="Лагерь лого" class="camps__img vhs">
-                    <a href="" class="descr descr_site">Сайт</a>
+                    <a href="https://своимисловами.рф/" class="descr descr_site">Сайт</a>
                 </div>
+                <!-- <div class="camps__item">
+                    <img src="img/camps/camp4.png" alt="Лагерь лого" class="camps__img">
+                    <a href="https://lesh.info/" class="descr descr_site">Сайт</a>
+                </div>
+                <div class="camps__item">
+                    <img src="img/camps/camp5.png" alt="Лагерь лого" class="camps__img">
+                    <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
+                </div> -->
             </div>
         </div>
     </section>
 
     <section>
         <div class="faq">
-            <h2 class="title title_faq">FAQ</h2>
+            <h2 id="head_faq" class="title title_faq">FAQ</h2>
             <div class="faq__wrapper">
                 <div class="faq__item">
                     <h3 class="descr descr_faq">Платное ли обучение?</h3>
