--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
     <section>
         <div class="about">
-            <h2 class="title">О проекте</h2>
+            <h2 class="title title_about">О проекте</h2>
             <p class="descr descr_about">Школа вожатых — это тематический образовательный проект для студентов 4
                 кампусов НИУ ВШЭ, направленный на получение профессиональных навыков, доступных для применения в
                 образовательных центрах, лагерях и базах с программами для одарённых детей</p>
@@ -70,7 +70,7 @@
 
     <section>
         <div class="org">
-            <h2 class="title">Организатор проекта</h2>
+            <h2 class="title title_org">Организатор проекта</h2>
             <p class="descr descr_org">Студенческая организация «Вышка — детям», развивающая вожатское сообщество в
                 стенах НИУ ВШЭ</p>
             <img src="img/vd.png" alt="Команда ВД" class="org__img">
@@ -132,7 +132,9 @@
                         реальных кейсов</p>
                 </div>
             </div>
-            <h3 class="subtitle subtitle_topics">Темы и расписание занятий</h3>
+            <a href="https://drive.google.com/file/d/1BxFiZu1OBHoj3aAA6CJhe2pZEO9AiIT5/view?usp=share_link">
+                <h3 class="subtitle subtitle_topics">Темы и расписание занятий</h3>
+            </a>
             <a href="#"><button class="format__btn subtitle subtitle_btn_format">Регистрация</button></a>
         </div>
     </section>
@@ -190,15 +192,15 @@
         <div class="camps">
             <h2 class="title title_camps">Где работают выпускники?</h2>
             <div class="camps__wrapper">
-                <div class="camps__item">
+                <div class="camps__item camps__item1">
                     <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img dano">
                     <a href="https://dano.hse.ru/" class="descr descr_site">Сайт</a>
                 </div>
-                <div class="camps__item">
+                <div class="camps__item camps__item2">
                     <img src="img/camps/camp2.png" alt="Лагерь лого" class="camps__img orl">
                     <a href="https://center-orlyonok.ru/" class="descr descr_site">Сайт</a>
                 </div>
-                <div class="camps__item">
+                <div class="camps__item camps__item3">
                     <img src="img/camps/camp3.png" alt="Лагерь лого" class="camps__img vhs">
                     <a href="https://своимисловами.рф/" class="descr descr_site">Сайт</a>
                 </div>
@@ -211,6 +213,7 @@
                     <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
                 </div> -->
             </div>
+            <img src="icons/trio_camps.svg" alt="Треугольник" class="capms__icon">
         </div>
     </section>
 
