full adaptive 320px

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Школа Вожатых НИУ ВШЭ 2023</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <!-- <link rel="stylesheet" href="css/slick.css"> -->
 </head>
 
 <body>
@@ -73,7 +74,7 @@
             <h2 class="title title_org">Организатор проекта</h2>
             <p class="descr descr_org">Студенческая организация «Вышка — детям», развивающая вожатское сообщество в
                 стенах НИУ ВШЭ</p>
-            <img src="img/vd.png" alt="Команда ВД" class="org__img">
+            <img src="img/vd_star.png" alt="Команда ВД" class="org__img">
             <div class="about__numbers_org">
                 <div class="about__number_org">
                     <h2 class="title title_number_red">20+</h2>
@@ -257,6 +258,10 @@
         </div>
     </section>
 
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script> -->
 </body>
 
 </html>
