--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,9 @@
     <section>
         <div class="org">
             <h2 class="title title_org">Организатор проекта</h2>
-            <p class="descr descr_org">Студенческая организация «Вышка — детям», развивающая вожатское сообщество в
+            <p class="descr descr_org">Студенческая организация <span>«Вышка — детям»</span>, развивающая вожатское
+                сообщество
+                в
                 стенах НИУ ВШЭ</p>
             <img src="img/vd_star.png" alt="Команда ВД" class="org__img">
             <div class="about__numbers_org">
@@ -134,7 +136,7 @@
                 </div>
             </div>
             <a href="https://drive.google.com/file/d/1BxFiZu1OBHoj3aAA6CJhe2pZEO9AiIT5/view?usp=share_link">
-                <h3 class="subtitle subtitle_topics">Темы и расписание занятий</h3>
+                <h3 class="subtitle subtitle_topics">Расписание занятий</h3>
             </a>
             <a href="#"><button class="format__btn subtitle subtitle_btn_format">Регистрация</button></a>
         </div>
@@ -193,28 +195,31 @@
         <div class="camps">
             <h2 class="title title_camps">Где работают выпускники?</h2>
             <div class="camps__wrapper">
-                <div class="camps__item camps__item1">
-                    <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img dano">
+                <div class="camps__item">
+                    <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img uris">
                     <a href="https://dano.hse.ru/" class="descr descr_site">Сайт</a>
                 </div>
-                <div class="camps__item camps__item2">
+                <div class="camps__item">
                     <img src="img/camps/camp2.png" alt="Лагерь лого" class="camps__img orl">
                     <a href="https://center-orlyonok.ru/" class="descr descr_site">Сайт</a>
                 </div>
-                <div class="camps__item camps__item3">
-                    <img src="img/camps/camp3.png" alt="Лагерь лого" class="camps__img vhs">
+                <div class="camps__item">
+                    <img src="img/camps/camp3.png" alt="Лагерь лого" class="camps__img mos">
                     <a href="https://своимисловами.рф/" class="descr descr_site">Сайт</a>
                 </div>
-                <!-- <div class="camps__item">
-                    <img src="img/camps/camp4.png" alt="Лагерь лого" class="camps__img">
+                <div class="camps__item">
+                    <img src="img/camps/camp4.png" alt="Лагерь лого" class="camps__img soft">
                     <a href="https://lesh.info/" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
-                    <img src="img/camps/camp5.png" alt="Лагерь лого" class="camps__img">
+                    <img src="img/camps/camp5.png" alt="Лагерь лого" class="camps__img euro">
                     <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
-                </div> -->
+                </div>
+                <div class="camps__item">
+                    <img src="img/camps/camp6.png" alt="Лагерь лого" class="camps__img lesh">
+                    <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
+                </div>
             </div>
-            <img src="icons/trio_camps.svg" alt="Треугольник" class="capms__icon">
         </div>
     </section>
 
@@ -260,8 +265,8 @@
 
     <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/script.js"></script> -->
+    <script src="js/slick.min.js"></script> -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
