capms with links

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
             <div class="camps__wrapper">
                 <div class="camps__item">
                     <img src="img/camps/camp1.png" alt="Лагерь лого" class="camps__img uris">
-                    <a href="https://dano.hse.ru/" class="descr descr_site">Сайт</a>
+                    <a href="https://olymp.hse.ru/" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp2.png" alt="Лагерь лого" class="camps__img orl">
@@ -205,19 +205,19 @@
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp3.png" alt="Лагерь лого" class="camps__img mos">
-                    <a href="https://своимисловами.рф/" class="descr descr_site">Сайт</a>
+                    <a href="https://mosgortur.ru/?ysclid=lbb78nnt6546469161" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp4.png" alt="Лагерь лого" class="camps__img soft">
-                    <a href="https://lesh.info/" class="descr descr_site">Сайт</a>
+                    <a href="https://vk.com/softskillscamp" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp5.png" alt="Лагерь лого" class="camps__img euro">
-                    <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
+                    <a href="https://www.euroclubs.ru/" class="descr descr_site">Сайт</a>
                 </div>
                 <div class="camps__item">
                     <img src="img/camps/camp6.png" alt="Лагерь лого" class="camps__img lesh">
-                    <a href="https://mootcourt.hse.ru/" class="descr descr_site">Сайт</a>
+                    <a href="https://lesh.info/" class="descr descr_site">Сайт</a>
                 </div>
             </div>
         </div>
